텍스트 수정 및 오타 수정

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span class="o-filled"></span>f a k<span class="o-filled"></span>ala’s n<span class="o-filled"></span>se.
             </h1>
             <p class="koala-font">
-                In this f<span class="o-filled"></span>nt, every letter "<span class="O-filled"></span>" is fully filled in black, highlighting this unique feature. The f<span class="o-filled"></span>nt is versatile and can adapt t<span class="o-filled"></span> vari<span class="o-filled"></span>us design contexts while maintaining its distinct identity. These filled "<span class="O-filled"></span>" shapes als<span class="o-filled"></span> serve as a subtle visual m<span class="o-filled"></span>tif, creating a c<span class="o-filled"></span>nsistent and rec<span class="o-filled"></span>gnizable pattern thr<span class="o-filled"></span>ugh<span class="o-filled"></span>ut the text.
+                In this f<span class="o-filled"></span>nt, every letter "<span class="O-filled"></span>" is fully filled in black, highlighting this unique feature. The f<span class="o-filled"></span>nt is versatile and can adapt t<span class="o-filled"></span> vari<span class="o-filled"></span>us design c<span class="o-filled"></span>ntexts while maintaining its distinct identity. These filled "<span class="O-filled"></span>" shapes als<span class="o-filled"></span> serve as a subtle visual m<span class="o-filled"></span>tif, creating a c<span class="o-filled"></span>nsistent and rec<span class="o-filled"></span>gnizable pattern thr<span class="o-filled"></span>ugh<span class="o-filled"></span>ut the text.
             </p>
 
             <p class="koala-font">
